Fri May 22 23:22:53 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* missing/vsnprintf.c (errno): [BUG] fixes a compilation 
	  error on SIZEOF_LONG > SIZEOF_INT.
	  (BSD_vfprintf): ditto.

Fri May 22 23:20:48 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* spec/default.mspec: follows runruby.rb's move at r23542.

Fri May 22 21:38:55 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* NEWS: add Time#to_r.

Fri May 22 20:29:01 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* config.guess: moved into tool/.

	* config.sub: ditto.

	* install-sh: ditto

	* configure.in: follows the moves.

	* LEGAL: ditto.

Fri May 22 20:10:18 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* instruby.rb: moved into tool/.

	* mkconfig.rb: ditto.

	* rubytest.rb: ditto.

	* runruby.rb: ditto.

	* common.mk: follows the moves.

	* configure.in: ditto.

	* win32/Makefile.sub: ditto.

Fri May 22 05:09:43 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_slice_bang): avoid call of rb_scan_args() unless
	  it's really necessary.

Thu May 21 22:17:52 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* template/id.h.tmpl, id.h (enum ruby_method_ids): added some IDs.

	* debug.c (dummy_gdb_enums): added enum ruby_method_ids.

	* .gdbinit (rp): improved output of Symbol.

Thu May 21 21:07:22 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* missing/vsnprintf.c (BSD_vfprintf): support for 'z' modifier.

Thu May 21 18:55:33 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* gem_prelude.rb (Gem.default_dir and misc.): use rubylibprefix.
	  follows the chagne in r23368.

Thu May 21 12:07:43 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (RB_EVENT_HOOKS_HAVE_CALLBACK_DATA):
	  new macro for compatibility check.

Thu May 21 01:43:40 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_long2int, RARRAY_LENINT): check long to
	  cast to int.  [ruby-dev:38508]

	* struct.c, vm_eval.c, vm_insnhelper.c: use RARRAY_LENINT.
